# token_index

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe.txt
include/bm/: bm.h
include/common/: scope_exit.h
include/levenshtein_automaton/: LevenshteinDFA.h  LevenshteinNFA.h  trie_node.h  trie_tree.h
include/token_index/: BM.h  common.h  field_manager.h  header.h  index_manager.h  index_manager_v1.h  index_manager_v2.h  index_manager_v3.h  index_manager_v3_0.h  index_manager_v3_1.h  index_manager_v4_0.h  index_manager_v4_0_1.h  index_manager_v4_0_2.h  index_manager_v4_1.h  ti_trie_node.h  ti_trie_tree.h  token_manager.h  types.h
resource/field_dir/: datatabase.txt  db.txt
resources/: col_file.txt  query.txt  query2.txt  query3.txt  regex.txt  wordsToTest.txt  wordsToTest2.txt
resources/field_dir/: query2.txt
src/bm/: bm.cpp
src/levenshtein_automaton/: LevenshteinDFA.cpp  LevenshteinNFA.cpp  trie_node.cpp  trie_tree.cpp
src/token_index/: BM.cpp  common.cpp  field_manager.cpp  index_manager.cpp  index_manager_v1.cpp  index_manager_v2.cpp  index_manager_v3.cpp  index_manager_v3_0.cpp  index_manager_v3_1.cpp  index_manager_v4_0.cpp  index_manager_v4_0_1.cpp  index_manager_v4_0_2.cpp  index_manager_v4_1.cpp  ti_trie_node.cpp  ti_trie_tree.cpp  token_manager.cpp  types.cpp
tests/: filter.cpp  test.cpp  test2.cpp  test_bm.cpp  test_field_manager.cpp  test_field_regex.cpp  test_index_manager.cpp  test_index_manager_v1.cpp  test_index_manager_v2.cpp  test_la.cpp  test_la_index_manager.cpp
